--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "accan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.36.1",
+    "connect-redis": "^7.0.1",
     "cors": "^2.8.5",
     "datauri": "^4.1.0",
     "dotenv": "^16.0.3",
@@ -22,7 +24,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "redis": "^4.6.6"
   },
   "devDependencies": {
     "eslint": "^8.38.0",
