--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "pg": "^8.10.0",
+    "randombytes": "^2.1.0",
     "redis": "^4.6.6"
   },
   "devDependencies": {
