--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "midtrans-client": "^1.3.1",
     "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
